# options-lab

./: .gitignore  pyrightconfig.json
backend/: main.py  pyproject.toml  pyrightconfig.json
backend/api/routes/: analyse.py  chain.py  quote.py  strategy.py
backend/api/schemas/: analyse.py  chain.py  quote.py  strategy.py
backend/calc/: black_scholes.py  pnl.py  strategies.py
backend/providers/: base.py  yfinance_provider.py
backend/tests/: test_black_scholes.py  test_pnl.py  test_provider_protocol.py  test_routes.py  test_schemas.py  test_strategies.py
docs/superpowers/plans/: 2026-05-30-options-analyser.md
docs/superpowers/specs/: 2026-05-30-options-analyser-design.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/ChainTable/: ChainTable.tsx
frontend/src/components/GreeksPanel/: GreeksPanel.tsx
frontend/src/components/Header/: Header.tsx
frontend/src/components/LearnPanel/: LearnPanel.tsx
frontend/src/components/PnLChart/: PnLChart.tsx
frontend/src/components/PositionCard/: PositionCard.tsx
frontend/src/components/StrategySelector/: StrategySelector.tsx
frontend/src/components/TimeframeSlider/: TimeframeSlider.tsx
frontend/src/pages/: Dashboard.tsx
frontend/src/types/: options.ts
